--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -38,6 +38,10 @@
                         url: {
                             heading: 'URL',
                             type: 'singleline'
+                        },
+                        badge: {
+                            heading: 'Badge',
+                            type: 'singleline'
                         }
                     },
                     rows: settings['buildHooks']
